# conversion

./: CMakeLists.txt  README.md  vix.json
include/vix/conversion/: ConversionError.hpp  Expected.hpp  Parse.hpp  ToBool.hpp  ToEnum.hpp  ToFloat.hpp  ToInt.hpp  ToString.hpp
include/vix/conversion/detail/: Ascii.hpp  FloatParse.hpp  IntegerParse.hpp  Trim.hpp
tests/: CMakeLists.txt  to_bool_smoke.cpp  to_enum_smoke.cpp  to_float_smoke.cpp  to_int_smoke.cpp
